fix a bug caused by AddLocationWidget z-index (#120)

--- a/src/components/AddLocationWidget.scss
+++ b/src/components/AddLocationWidget.scss
@@ -4,7 +4,7 @@
   bottom: 0;
   right: 0;
   height: auto;
-  z-index: 1000;
+  /*z-index: 1000;*/
   opacity: 0.85;
 }
 
